Fixed bugs: header background not solid, info doesn't immediately load on mobile after click, play button on mobile

--- a/src/components/AppHeader/AppHeader.scss
+++ b/src/components/AppHeader/AppHeader.scss
@@ -1,13 +1,13 @@
 @import '../_variables.scss';
 
 .AppHeader {
-  background: rgb(0, 0, 0);
   color: white;
   height: 70px;
   width: 100%;
 }
 
 .innerHeader {
+  background: rgb(0, 0, 0);
   height: 70px;
   padding: 0 60px;
   position: relative;
@@ -22,6 +22,7 @@
 }
 
 .innerHeaderScrolled {
+  background: rgb(0, 0, 0);
   height: 70px;
   padding: 0 60px;
   position: fixed;
